added yellow section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </section>
 
 <section class="yellow-section">
-	<img class="yellow" src="img/ship-1.svg" alt="">
+	<img class="shuttle" src="img/shuttle.svg" alt="">
 </section>
 
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
